--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html>
 <head>
 	<title>VisualSort</title>
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
 </head>
 <body>
-
+	<div class="container">
+		<div class="header"><h1>VisualSort</h1></div>
+		<nav>
+			<ul>
+				<li><a href="qs_listen.html">Quicksort (mehrere Listen)</a></li>
+				<li><a href="qs_inplace.html">Quicksort (In-Place-Verfahren)</a></li>
+			</ul>
+		</nav>
+		<div class="content">
+			<img src="xkcd.png" class="xkcd" alt="Comic zu Sortieralgorithmen">
+			<p>Webcomic: <a href="https://xkcd.com/1185/">xkcd 1185: Ineffective Sorts, CC BY-NC 2.5</a></p>
+		</div>
+	</div>
 </body>
 </html>
