--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 		</nav>
 		<div class="content">
 			<img src="xkcd.png" class="xkcd" alt="Comic zu Sortieralgorithmen">
-			<p>Webcomic: <a href="https://xkcd.com/1185/">xkcd 1185: Ineffective Sorts, CC BY-NC 2.5</a></p>
+			<p>
+				Webcomic: <a href="https://xkcd.com/1185/">xkcd 1185: Ineffective Sorts, CC BY-NC 2.5</a>
+			</p>
 		</div>
 	</div>
 </body>
