jQuery auf CDN umgestellt

--- a/qs_listen.html
+++ b/qs_listen.html
@@ -3,7 +3,9 @@
 <head>
 	<title>VisualSort</title>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	<script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
+			  integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc="
+			  crossorigin="anonymous"></script>
 	<script type="text/javascript" src="qs_listen.js"></script>
 </head>
 <body>
